  
  More work needed on that topic, and some server-side computations need to be fully recreated/emulated.
  
[GAME]
  subway.cpp/.h : Added PSubway class to manage Neocron subway cabs.
  Many files: Extended the Chair system to a general Seat system, used for subway and maybe for vhc.

Hammag; 18.11.2007 18:45 GMT+2
----------
[rev. 94]
<General changes>
  Subway is now apparently running well.
  Much work was needed to achieve that as some server-side computations were needed to emulate the subway movements.
  There still may be some timing issues about the subway cab positions and door status on the long run...
  Visibility between subway travellers isn't working yet. It will be done when working on vehicules to try make it all the same way.

  Added subcommand @debug subway
  
[GAME]
  subway.cpp/.h : Various changes
  decoder/udp_charmove.cpp/.h , decoder/udp_useobject.cpp/.h : Various changes for subway use
  chars.cpp/.h : moved PCharPosition class out of PChar, and added some required methods to it
  decoder/udp_terminal.h/.cpp : started some work on that

Hammag; 28.12.2007 00:50 GMT+2
----------
[rev. 96]
<General changes>
  Basic vehicle is in place.
  One vhc of each type is available to every character. No prereq limitation.
  Only pilot access available, and for the owner only.
  No zoning yet.
  Orientation issues from the others chars point of view.
  Many things not implemented (and a good part still to be decoded)
  
[GAME]
  Many changes in decoders and char, client and vehicle code.

Hammag; 20.01.2008 20:00 GMT+2
----------
[rev. 97]
<General changes>
  [GAME + INFO]
    sql.cpp/.h : added EscapeString() methode to PMySQL class, to permit string escape in SQL queries
    *.cpp : escape all strings used in SQL queries, which is now mandatory.
  [GAME + INFO + PATCH]
    *.cpp : replaced strcpy(), strcat(), sprintf() with respectively strncpy(), strncat(), snprintf()
      The first ones are now forbidden.